--- a/templates/etc/samba/smb.conf.j2
+++ b/templates/etc/samba/smb.conf.j2
@@ -2,40 +2,33 @@
 #======================= Global Settings =======================
 {% if ctdb_samba_join_domain %}
 [global]
-#  client ntlmv2 auth = yes
-#  client use spnego = yes
-  clustering = yes
-  dns proxy = no  #Default is yes
-#  encrypt passwords = yes
+  clustering = {{ ctdb_samba_global_options.clustering }}
+  deadtime = {{ ctdb_samba_global_options.deadtime }}
+  dns proxy = {{ ctdb_samba_global_options.dns_proxy }}
   idmap config * : backend = tdb2
-  idmap config * : range = 100000-299999
+  idmap config * : range = {{ ctdb_samba_global_options.idmap_range }}
   idmap config {{ ctdb_samba_active_directory_info.workgroup|upper }} : backend = rid
   idmap config {{ ctdb_samba_active_directory_info.workgroup|upper }} : range = {{ ctdb_samba_active_directory_info.idmap_range }}
   log file = /var/log/samba/log.%m
-#  map to guest = bad user
-#  max log size = 1000
+  max log size = {{ ctdb_samba_global_options.max_log_size }}
   netbios name = {{ ctdb_samba_active_directory_info.netbios_name }}
 #  obey pam restrictions = yes
 #  pam password change = yes
-#  panic action = /usr/share/samba/panic-action %d
-#  passdb backend = tdbsam
-#  passwd chat = *Enter\snew\s*\spassword:* %n\n *Retype\snew\s*\spassword:* %n\n *password\supdated\ssuccessfully* .
 #  passwd program = /usr/bin/passwd %u
   private dir = {{ ctdb_lock_directory }}
   realm = {{ ctdb_samba_active_directory_info.realm|upper }}
-  restrict anonymous = 2
+  restrict anonymous = {{ ctdb_samba_global_options.restrict_anonymous }}
   security = ads
   server role = standalone server
-  server string = %h server (Samba, Ubuntu)
-  strict locking = no
+  server string = {{ ctdb_samba_global_options.server_string }}
+  strict locking = {{ ctdb_samba_global_options.strict_locking }}
   syslog = 0
-  template homedir = /home/%D/%U
   template shell = /bin/bash
-  unix password sync = yes
-  usershare allow guests = yes
+  unix password sync = {{ ctdb_samba_global_options.unix_password_sync }}
+  usershare allow guests = {{ ctdb_samba_global_options.usershare_allow_guests }}
   winbind enum groups = {{ ctdb_samba_active_directory_info.winbind_enum_groups }}
   winbind enum users = {{ ctdb_samba_active_directory_info.winbind_enum_users }}
-  winbind use default domain = yes
+  winbind use default domain = {{ ctdb_samba_active_directory_info.winbind_use_default_domain }}
   workgroup = {{ ctdb_samba_active_directory_info.workgroup|upper }}
 
 # Below added from https://wiki.samba.org/index.php/Shares_with_Windows_ACLs
@@ -43,6 +36,13 @@
   map acl inherit = yes
   store dos attributes = yes
   vfs objects = acl_xattr
+
+{%   if ctdb_samba_restrict_access_to_public_addresses_only %}
+# Restrict access only to specific addresses
+  bind interfaces only = true
+  interfaces = 127.0.0.1{% for item in ctdb_public_addresses %} {{ item.address }}{% if not loop.last %}{% endif %}{% endfor %}
+
+{%   endif %}
 
 ## Shares ##
 [printers]
